<resources>
    <string name="app_name">attendance_tracking_management_system</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    =======
    <string name="settings">Settings</string>
    <string name="application">Application</string>
    <string name="account">Account</string>
    <string name="add">Add Employee</string>
    <string name="logout">Log Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="logo">Logo</string>
    <string name="Loginto">Login to</string>
    <string name="attendance_system">Attendance System</string>
    <string name="username">User name</string>
    <string name="phonenum">Phone Number</string>
    <string name="role">Role</string>
    <string name="addemployee">Add Employee</string>
    <string name="title_activity_user_info">user_info</string>
    <string name="passcon">Confirm Password</string>
    <string name="all">All</string>
    <string name="dp1">DP1</string>
    <string name="dp2">DP2</string>
    <string name="department">Department</string>
    <string name="update_account">Save Changes</string>
    <string name="close">close</string>
    <string name="employees">Employees</string>
    <string name="resetPassword">Reset Password</string>


    <string-array name="role">
        <item>Role</item>
        <item>Admin</item>
        <item>Employee</item>
    </string-array>

    <string-array name="department">
        <item>Department</item>
        <item>Dep 1</item>
        <item>Dep 2</item>
    </string-array>

</resources>