<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_layout"
    tools:context=".SettingsFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/logout"
        android:drawablePadding="25dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/logout"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/add"
        android:drawablePadding="25dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/add"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applicationBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applicationBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/application"
        android:drawablePadding="25dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/application"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accountBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/account"
        android:drawablePadding="25dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/account"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>